test-data/negative/unclosed_property_block.aadl
-- ERROR: Missing closing brace in property block
package unclosed_property_block
public
    system s
    features
        p1: in data port {
            Period => 100 ms;
    end s;
end unclosed_property_block;
